tests/golden/parts/manifests/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8ify.service: mongo
  name: mongo
spec:
  ports:
  - name: "27017"
    port: 27017
    targetPort: 27017
  - name: "33000"
    port: 33000
    targetPort: 33000
  selector:
    k8ify.service: mongo
status:
  loadBalancer: {}
