tests/golden/parts/manifests/nginx-frontend-oasp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8ify.ref-slug: oasp
    k8ify.service: nginx-frontend
  name: nginx-frontend-oasp
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  - name: "4480"
    port: 4480
    targetPort: 4480
  selector:
    k8ify.ref-slug: oasp
    k8ify.service: nginx-frontend
status:
  loadBalancer: {}
